[gd_scene load_steps=9 format=3 uid="uid://b7xm4wq9kp3n2"]

[ext_resource type="Script" path="res://scripts/boarding/boarding_manager.gd" id="1_manager"]
[ext_resource type="PackedScene" uid="uid://bkp2xnq7fm4y3" path="res://scenes/boarding/boarding_player.tscn" id="2_player"]
[ext_resource type="PackedScene" uid="uid://dqw8m3x6np2k4" path="res://scenes/boarding/exit_point.tscn" id="4_exit"]
[ext_resource type="PackedScene" uid="uid://c6slot1nvent0ry" path="res://scenes/loot/slot_inventory.tscn" id="5_inventory"]
[ext_resource type="Script" path="res://scripts/boarding/loot_menu.gd" id="6_lootmenu"]
[ext_resource type="PackedScene" uid="uid://bpaxn8mxmxdmdc" path="res://scenes/ui/pause_manager.tscn" id="7_pause"]
[ext_resource type="PackedScene" uid="uid://bpm8n3k5qx7ry" path="res://scenes/boarding/minimap.tscn" id="7_minimap"]
[ext_resource type="PackedScene" uid="uid://cpanelcombined1" path="res://scenes/ui/character_panel.tscn" id="8_charpanel"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_boundary"]
size = Vector2(50, 1000)

[node name="BoardingScene" type="Node2D"]
script = ExtResource("1_manager")
use_procedural_layout = true

[node name="ShipInterior" type="Node2D" parent="."]

[node name="Containers" type="Node2D" parent="."]

[node name="Walls" type="Node2D" parent="."]

[node name="Player" parent="." instance=ExtResource("2_player")]
position = Vector2(100, 450)

[node name="ExitPoint" parent="." instance=ExtResource("4_exit")]
position = Vector2(1500, 450)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(640, 360)
zoom = Vector2(0.8, 0.8)
limit_smoothed = true
position_smoothing_enabled = true
position_smoothing_speed = 5.0
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.15
drag_top_margin = 0.15
drag_right_margin = 0.15
drag_bottom_margin = 0.15

[node name="UI" type="CanvasLayer" parent="."]

[node name="TopBar" type="HBoxContainer" parent="UI"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 50.0
grow_horizontal = 2
theme_override_constants/separation = 50

[node name="TimerPanel" type="PanelContainer" parent="UI/TopBar"]
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="UI/TopBar/TimerPanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Icon" type="Label" parent="UI/TopBar/TimerPanel/HBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "‚è±"

[node name="TimerLabel" type="Label" parent="UI/TopBar/TimerPanel/HBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.9, 0.5, 1)
theme_override_font_sizes/font_size = 32
text = "1:30"

[node name="ShipTierLabel" type="Label" parent="UI/TopBar"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.6, 0.7, 0.8, 0.6)
theme_override_font_sizes/font_size = 18
text = "TIER 1: CARGO SHUTTLE"
horizontal_alignment = 1

[node name="LootPanel" type="PanelContainer" parent="UI/TopBar"]
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="UI/TopBar/LootPanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Icon" type="Label" parent="UI/TopBar/LootPanel/HBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.3, 1, 0.5, 1)
theme_override_font_sizes/font_size = 28
text = "üí∞"

[node name="LootValueLabel" type="Label" parent="UI/TopBar/LootPanel/HBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.3, 1, 0.5, 1)
theme_override_font_sizes/font_size = 32
text = "$0"

[node name="Minimap" parent="UI" instance=ExtResource("7_minimap")]
unique_name_in_owner = true
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -220.0
offset_top = 60.0
offset_right = -10.0
offset_bottom = 260.0
grow_horizontal = 0

[node name="BottomHint" type="Label" parent="UI"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -400.0
offset_top = -40.0
offset_right = 400.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.6, 0.7, 0.6, 0.8)
theme_override_font_sizes/font_size = 14
text = "WASD: Move | E: Interact/Loot | TAB: Character Menu | Escape through AIRLOCK!"
horizontal_alignment = 1

[node name="CharacterPanel" parent="UI" instance=ExtResource("8_charpanel")]
unique_name_in_owner = true
visible = false

[node name="LootMenu" type="Control" parent="UI"]
unique_name_in_owner = true
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_lootmenu")

[node name="Dimmer" type="ColorRect" parent="UI/LootMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="PanelContainer" parent="UI/LootMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -300.0
offset_right = 500.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="UI/LootMenu/Panel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Header" type="Label" parent="UI/LootMenu/Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "LOOTING: Container"
horizontal_alignment = 1

[node name="ContentArea" type="HBoxContainer" parent="UI/LootMenu/Panel/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="ContainerSide" type="VBoxContainer" parent="UI/LootMenu/Panel/VBox/ContentArea"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="UI/LootMenu/Panel/VBox/ContentArea/ContainerSide"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.8, 0.7, 1)
theme_override_font_sizes/font_size = 18
text = "CONTAINER ITEMS (Drag to inventory)"
horizontal_alignment = 1

[node name="ItemsPanel" type="PanelContainer" parent="UI/LootMenu/Panel/VBox/ContentArea/ContainerSide"]
layout_mode = 2
size_flags_vertical = 3

[node name="Items" type="Control" parent="UI/LootMenu/Panel/VBox/ContentArea/ContainerSide/ItemsPanel"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="InventorySide" type="VBoxContainer" parent="UI/LootMenu/Panel/VBox/ContentArea"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="UI/LootMenu/Panel/VBox/ContentArea/InventorySide"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.9, 1)
theme_override_font_sizes/font_size = 18
text = "YOUR INVENTORY"
horizontal_alignment = 1

[node name="InventoryGrid" parent="UI/LootMenu/Panel/VBox/ContentArea/InventorySide" instance=ExtResource("5_inventory")]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3

[node name="ValueLabel" type="Label" parent="UI/LootMenu/Panel/VBox/ContentArea/InventorySide"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 1, 0.5, 1)
theme_override_font_sizes/font_size = 16
text = "Inventory Value: $0"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="UI/LootMenu/Panel/VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "CLOSE [ESC]"

[node name="EscapePrompt" type="PanelContainer" parent="UI"]
unique_name_in_owner = true
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 100.0
offset_right = 150.0
offset_bottom = 180.0
grow_horizontal = 2

[node name="VBox" type="VBoxContainer" parent="UI/EscapePrompt"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="UI/EscapePrompt/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.3, 1, 0.5, 1)
theme_override_font_sizes/font_size = 24
text = "ESCAPE!"
horizontal_alignment = 1

[node name="Hint" type="Label" parent="UI/EscapePrompt/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Press [E] to board your ship"
horizontal_alignment = 1

[node name="PauseManager" parent="." instance=ExtResource("7_pause")]
